fix: fix content layout shift due to sidebar not knowing its final size.
Due to loading fonts and icons, the sidebar was not taking up the size
it needed initially. This caused a substantial layout shift which was
noticable on fast connections and unavoidable on slower connections.

--- a/_includes/site.css
+++ b/_includes/site.css
@@ -239,6 +239,21 @@ nav>div {
     flex-flow: column nowrap;
 }
 
+@media screen and (min-width: 768px) {
+    nav>div.larger-sidebar-section {
+        min-height: 550px;
+    }
+    nav>div {
+        min-height: 320px;
+    }
+    nav>div>a {
+        flex: 3;
+    }
+    nav>div>a>i {
+        display: inline-block;
+    }
+}
+
 nav a:focus,
 nav a:hover,
 div.post-navigation a:hover {
